--- a/index.html
+++ b/index.html
@@ -2,37 +2,37 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@800&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap" rel="stylesheet">
         <title>
         COLORANDOM
         </title>
     </head>
     <body>
         <header>
-            COLORANDOM
+            <strong>COLORANDOM</strong>
         </header>
         <section class="mainDisplay">
-            <div class="box-title" id="1">
-                <div class="color-box"></div>
-                <div class="hex-code">#FFFFFF</div>
+            <div class="box-title">
+                <div class="color-box" id="b1"></div>
+                <div class="hex-code">#EA9999</div>
             </div>
-            <div class="box-title" id="2">
-                <div class="color-box"></div>
-                <div class="hex-code">#FFFFFF</div>
+            <div class="box-title">
+                <div class="color-box" id="b2"></div>
+                <div class="hex-code">#FACB9C</div>
             </div>
-            <div class="box-title" id="3">
-                <div class="color-box"></div>
-                <div class="hex-code">#FFFFFF</div>
+            <div class="box-title">
+                <div class="color-box" id="b3"></div>
+                <div class="hex-code">#FFE59A</div>
             </div>
-            <div class="box-title" id="4">
-                <div class="color-box"></div>
-                <div class="hex-code">#FFFFFF</div>
+            <div class="box-title">
+                <div class="color-box" id="b4"></div>
+                <div class="hex-code">#B6D7A8</div>
             </div>
-            <div class="box-title" id="5">
-                <div class="color-box"></div>
-                <div class="hex-code">#FFFFFF</div>
+            <div class="box-title">
+                <div class="color-box" id="b5"></div>
+                <div class="hex-code">#A4C4CA</div>
             </div>
-                
+     
         </section>
     </body>
 
