Add new palette button, font styles, button css styling.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
     <head>
         <link rel="stylesheet" href="styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;800&display=swap" rel="stylesheet">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
         <title>
         COLORANDOM
         </title>
@@ -11,7 +13,7 @@
         <header>
             <strong>COLORANDOM</strong>
         </header>
-        <section class="mainDisplay">
+        <section class="main-display">
             <div class="box-title">
                 <div class="color-box" id="b1"></div>
                 <div class="hex-code">#EA9999</div>
@@ -32,8 +34,13 @@
                 <div class="color-box" id="b5"></div>
                 <div class="hex-code">#A4C4CA</div>
             </div>
-     
+        </section>
+        <section>
+            <div class="button-boxL"></div>
+            <button id="new-palette">
+                New Palette
+            </button>
+            <div class="button-boxR"></div>
         </section>
     </body>
-
 </html>
