Fix vertical space between children of body.

--- a/index.html
+++ b/index.html
@@ -14,33 +14,33 @@
             <strong>COLORANDOM</strong>
         </header>
         <section class="main-display">
-            <div class="box-title">
+            <div class="color-container">
                 <div class="color-box" id="b1"></div>
                 <div class="hex-code">#EA9999</div>
             </div>
-            <div class="box-title">
+            <div class="color-container">
                 <div class="color-box" id="b2"></div>
                 <div class="hex-code">#FACB9C</div>
             </div>
-            <div class="box-title">
+            <div class="color-container">
                 <div class="color-box" id="b3"></div>
                 <div class="hex-code">#FFE59A</div>
             </div>
-            <div class="box-title">
+            <div class="color-container">
                 <div class="color-box" id="b4"></div>
                 <div class="hex-code">#B6D7A8</div>
             </div>
-            <div class="box-title">
+            <div class="color-container">
                 <div class="color-box" id="b5"></div>
                 <div class="hex-code">#A4C4CA</div>
             </div>
         </section>
         <section>
-            <div class="button-boxL"></div>
+            <div class="button-box-l"></div>
             <button id="new-palette">
                 New Palette
             </button>
-            <div class="button-boxR"></div>
+            <div class="button-box-r"></div>
         </section>
     </body>
 </html>
