--- a/index.html
+++ b/index.html
@@ -15,23 +15,33 @@
         </header>
         <section class="main-display">
             <div class="color-container">
-                <div class="color-box" id="b1"></div>
+                <div class="color-box" id="b1">
+                    <img src="./assets/unlocked.png" class="lock-box">
+                </div>
                 <div class="hex-code">#EA9999</div>
             </div>
             <div class="color-container">
-                <div class="color-box" id="b2"></div>
+                <div class="color-box" id="b2">
+                    <img src="./assets/unlocked.png" class="lock-box">
+                </div>
                 <div class="hex-code">#FACB9C</div>
             </div>
             <div class="color-container">
-                <div class="color-box" id="b3"></div>
+                <div class="color-box" id="b3">
+                    <img src="./assets/unlocked.png" class="lock-box">
+                </div>
                 <div class="hex-code">#FFE59A</div>
             </div>
             <div class="color-container">
-                <div class="color-box" id="b4"></div>
+                <div class="color-box" id="b4">
+                    <img src="./assets/unlocked.png" class="lock-box">
+                </div>
                 <div class="hex-code">#B6D7A8</div>
             </div>
             <div class="color-container">
-                <div class="color-box" id="b5"></div>
+                <div class="color-box" id="b5">
+                    <img src="./assets/unlocked.png" class="lock-box">
+                </div>
                 <div class="hex-code">#A4C4CA</div>
             </div>
         </section>
@@ -42,5 +52,6 @@
             </button>
             <div class="button-box-r"></div>
         </section>
+        <script src="./main.js"></script>
     </body>
 </html>
