--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="hex-code">#A4C4CA</div>
             </div>
         </section>
-        <section>
+        <section class="button-area">
             <div class="button-box-l"></div>
             <button id="new-palette">
                 New Palette
