--- a/index.html
+++ b/index.html
@@ -16,31 +16,31 @@
         <section class="main-display">
             <div class="color-container">
                 <div class="color-box" id="b1">
-                    <img src="./assets/unlocked.png" class="lock-box">
+                    <img src="./assets/unlocked.png" class="lock-box unlocked">
                 </div>
                 <div class="hex-code">#EA9999</div>
             </div>
             <div class="color-container">
                 <div class="color-box" id="b2">
-                    <img src="./assets/unlocked.png" class="lock-box">
+                    <img src="./assets/unlocked.png" class="lock-box unlocked">
                 </div>
                 <div class="hex-code">#FACB9C</div>
             </div>
             <div class="color-container">
                 <div class="color-box" id="b3">
-                    <img src="./assets/unlocked.png" class="lock-box">
+                    <img src="./assets/unlocked.png" class="lock-box unlocked">
                 </div>
                 <div class="hex-code">#FFE59A</div>
             </div>
             <div class="color-container">
                 <div class="color-box" id="b4">
-                    <img src="./assets/unlocked.png" class="lock-box">
+                    <img src="./assets/unlocked.png" class="lock-box unlocked">
                 </div>
                 <div class="hex-code">#B6D7A8</div>
             </div>
             <div class="color-container">
                 <div class="color-box" id="b5">
-                    <img src="./assets/unlocked.png" class="lock-box">
+                    <img src="./assets/unlocked.png" class="lock-box unlocked">
                 </div>
                 <div class="hex-code">#A4C4CA</div>
             </div>
