Style saved pallette area

--- a/index.html
+++ b/index.html
@@ -10,48 +10,74 @@
         </title>
     </head>
     <body>
-        <header>
-            <strong>COLORANDOM</strong>
-        </header>
-        <section class="main-display">
-            <div class="color-container">
-                <div class="color-box" id="b1">
-                    <img src="./assets/unlocked.png" class="lock-box">
+        <main>
+            <header>
+                <h1>COLORANDOM</h1>
+            </header>
+            <section class="main-display">
+                <div class="color-container">
+                    <div class="color-box" id="b1">
+                        <img src="./assets/unlocked.png" class="lock-box">
+                    </div>
+                    <div class="hex-code">#EA9999</div>
                 </div>
-                <div class="hex-code">#EA9999</div>
-            </div>
-            <div class="color-container">
-                <div class="color-box" id="b2">
-                    <img src="./assets/unlocked.png" class="lock-box">
+                <div class="color-container">
+                    <div class="color-box" id="b2">
+                        <img src="./assets/unlocked.png" class="lock-box">
+                    </div>
+                    <div class="hex-code">#FACB9C</div>
                 </div>
-                <div class="hex-code">#FACB9C</div>
-            </div>
-            <div class="color-container">
-                <div class="color-box" id="b3">
-                    <img src="./assets/unlocked.png" class="lock-box">
+                <div class="color-container">
+                    <div class="color-box" id="b3">
+                        <img src="./assets/unlocked.png" class="lock-box">
+                    </div>
+                    <div class="hex-code">#FFE59A</div>
                 </div>
-                <div class="hex-code">#FFE59A</div>
-            </div>
-            <div class="color-container">
-                <div class="color-box" id="b4">
-                    <img src="./assets/unlocked.png" class="lock-box">
+                <div class="color-container">
+                    <div class="color-box" id="b4">
+                        <img src="./assets/unlocked.png" class="lock-box">
+                    </div>
+                    <div class="hex-code">#B6D7A8</div>
                 </div>
-                <div class="hex-code">#B6D7A8</div>
-            </div>
-            <div class="color-container">
-                <div class="color-box" id="b5">
-                    <img src="./assets/unlocked.png" class="lock-box">
+                <div class="color-container">
+                    <div class="color-box" id="b5">
+                        <img src="./assets/unlocked.png" class="lock-box">
+                    </div>
+                    <div class="hex-code">#A4C4CA</div>
                 </div>
-                <div class="hex-code">#A4C4CA</div>
-            </div>
-        </section>
-        <section class="button-area">
-            <div class="button-box-l"></div>
-            <button id="new-palette">
-                New Palette
-            </button>
-            <div class="button-box-r"></div>
-        </section>
+            </section>
+            <section class="button-area">
+                <div class="button-box-l"></div>
+                <button id="new-palette">
+                    New Palette
+                </button>
+                <div class="button-box-r"></div>
+                <div class="button-box-l"></div>
+                <button id="save-palette">
+                    Save Palette
+                </button>
+                <div class="button-box-r"></div>
+            </section>
+        </main>
+         <!-- <div> -->
+            <section class="save-container">
+                <h2>Saved Pallettes</h3>
+                    <div class="mini-container">
+                        <div class="mini-box"></div>
+                        <div class="mini-box"></div>
+                        <div class="mini-box"></div>
+                        <div class="mini-box"></div>
+                        <div class="mini-box"></div>
+                    </div>
+                    <div class="mini-container">
+                        <div class="mini-box"></div>
+                        <div class="mini-box"></div>
+                        <div class="mini-box"></div>
+                        <div class="mini-box"></div>
+                        <div class="mini-box"></div>
+                    </div>
+            </section>
+         <!-- </div> -->
         <script src="./main.js"></script>
     </body>
 </html>
