Set up default saved palette view and add hidden class

--- a/index.html
+++ b/index.html
@@ -59,25 +59,13 @@
                 <div class="button-box-r"></div>
             </section>
         </main>
-         <!-- <div> -->
             <section class="save-container">
-                <h2>Saved Pallettes</h3>
-                    <div class="mini-container">
-                        <div class="mini-box"></div>
-                        <div class="mini-box"></div>
-                        <div class="mini-box"></div>
-                        <div class="mini-box"></div>
-                        <div class="mini-box"></div>
-                    </div>
-                    <div class="mini-container">
-                        <div class="mini-box"></div>
-                        <div class="mini-box"></div>
-                        <div class="mini-box"></div>
-                        <div class="mini-box"></div>
-                        <div class="mini-box"></div>
-                    </div>
-            </section>
-         <!-- </div> -->
+                <h2>Saved Palettes</h3>
+                <p>No saved palettes yet!</p>
+                    <section class="mini-palettes">
+                        <!-- Saved palettes gets populated here -->
+                    </section>
+                </section>
         <script src="./main.js"></script>
     </body>
 </html>
