Finish saved button feature.

--- a/index.html
+++ b/index.html
@@ -47,16 +47,16 @@
                 </div>
             </section>
             <section class="button-area">
-                <div class="button-box-l"></div>
-                <button id="new-palette">
+                <div class="button-box-l new-palette"></div>
+                <button class="new-palette">
                     New Palette
                 </button>
-                <div class="button-box-r"></div>
-                <div class="button-box-l"></div>
-                <button id="save-palette">
+                <div class="button-box-r new-palette"></div>
+                <div class="button-box-l save-palette"></div>
+                <button class="save-palette">
                     Save Palette
                 </button>
-                <div class="button-box-r"></div>
+                <div class="button-box-r save-palette"></div>
             </section>
         </main>
             <section class="save-container">
