--- a/index.html
+++ b/index.html
@@ -59,13 +59,18 @@
                 <div class="button-box-r save-palette"></div>
             </section>
         </main>
-            <section class="save-container">
-                <h2>Saved Palettes</h2>
-                <p>No saved palettes yet!</p>
-                    <section class="mini-palettes">
-                        <!-- Saved palettes gets populated here -->
-                    </section>
-                </section>
+        <section class="save-container">
+            <h2>Saved Palettes</h2>
+            <p>No saved palettes yet!</p>
+            <section class="mini-palettes">
+                <!-- Saved palettes gets populated here -->
+            </section>
+        </section>
+        <div class="modal-window hidden">
+            <img class="modal-exit-button" src='./assets/delete.png'></img>
+            <span id="modalText">Are you sure you want to delete this palette?</span>
+            <button id="deletePaletteButton">Delete this palette</button>
+        </div>
         <script src="./main.js"></script>
     </body>
 </html>
