Clean up HTML and CSS

--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-        <title>
-        COLORANDOM
-        </title>
+        <title>COLORANDOM</title>
     </head>
     <body>
         <main>
@@ -19,31 +17,31 @@
                     <div class="color-box" id="b1">
                         <img src="./assets/unlocked.png" class="lock-box hover unlocked">
                     </div>
-                    <div class="hex-code">#EA9999</div>
+                    <div class="hex-code"></div>
                 </div>
                 <div class="color-container">
                     <div class="color-box" id="b2">
                         <img src="./assets/unlocked.png" class="lock-box hover unlocked">
                     </div>
-                    <div class="hex-code">#FACB9C</div>
+                    <div class="hex-code"></div>
                 </div>
                 <div class="color-container">
                     <div class="color-box" id="b3">
                         <img src="./assets/unlocked.png" class="lock-box hover unlocked">
                     </div>
-                    <div class="hex-code">#FFE59A</div>
+                    <div class="hex-code"></div>
                 </div>
                 <div class="color-container">
                     <div class="color-box" id="b4">
                         <img src="./assets/unlocked.png" class="lock-box hover unlocked">
                     </div>
-                    <div class="hex-code">#B6D7A8</div>
+                    <div class="hex-code"></div>
                 </div>
                 <div class="color-container">
                     <div class="color-box" id="b5">
                         <img src="./assets/unlocked.png" class="lock-box hover unlocked">
                     </div>
-                    <div class="hex-code">#A4C4CA</div>
+                    <div class="hex-code"></div>
                 </div>
             </section>
             <section class="button-area">
@@ -53,9 +51,7 @@
                 </button>
                 <div class="button-box-r new-palette"></div>
                 <div class="button-box-l save-palette"></div>
-                <button class="save-palette">
-                    Save Palette
-                </button>
+                <button class="save-palette">Save Palette</button>
                 <div class="button-box-r save-palette"></div>
             </section>
         </main>
