Address styling recommendations

--- a/index.html
+++ b/index.html
@@ -46,9 +46,7 @@
             </section>
             <section class="button-area">
                 <div class="button-box-l new-palette"></div>
-                <button class="new-palette">
-                    New Palette
-                </button>
+                <button class="new-palette">New Palette</button>
                 <div class="button-box-r new-palette"></div>
                 <div class="button-box-l save-palette"></div>
                 <button class="save-palette">Save Palette</button>
