Refactor the async function so user cannot click anywhere in the box to resolve

--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
         <div class="modal-window hidden">
             <img class="modal-exit-button hover" src='./assets/delete.png'></img>
             <span id="modalText">Are you sure you want to delete this palette?</span>
-            <button class="hover" id="deletePaletteButton">Delete this palette</button>
+            <div class="hover button-area">
+                <div class="button-box-l delete-palette-button"></div>
+                <button class="delete-palette-button">Delete this palette</button>
+                <div class="button-box-r delete-palette-button"></div>
+            </div>
         </div>
         <script src="./main.js"></script>
     </body>
