--- a/index.html
+++ b/index.html
@@ -60,9 +60,14 @@
                 <!-- Saved palettes gets populated here -->
             </section>
         </section>
-        <div class="modal-window hidden">
+        <div class="modal-window hidden" id="namePaletteModal">
+            <span id="saveModalText">Would you like to name this palette? (Leave blank if not)</span>
+            <input placeholder="Type name here..."></input>
+            <button id="savePaletteButton">Save</button>
+        </div>
+        <div class="modal-window hidden" id="deletePaletteModal">
             <img class="modal-exit-button" src='./assets/delete.png'></img>
-            <span id="modalText">Are you sure you want to delete this palette?</span>
+            <span id="deletetModalText">Are you sure you want to delete this palette?</span>
             <button id="deletePaletteButton">Delete this palette</button>
         </div>
         <script src="./main.js"></script>
