Refactor getSavedPalette to better handle displaying palette name

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <header>
                 <h1>COLORANDOM</h1>
             </header>
+            <span class="hidden" id="paletteName"></span>
             <section class="main-display">
                 <div class="color-container">
                     <div class="color-box" id="b1">
