Add extra styling on the save modal

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </section>
         <div class="modal-window hidden" id="namePaletteModal">
             <span id="saveModalText">Would you like to name this palette? (Leave blank if not)</span>
-            <input placeholder="Type name here..."></input>
+            <input id="paletteNameInput" placeholder="Type name here..."></input>
             <button id="savePaletteButton">Save</button>
         </div>
         <div class="modal-window hidden" id="deletePaletteModal">
