--- a/index.html
+++ b/index.html
@@ -68,7 +68,11 @@
         <div class="modal-window hidden" id="namePaletteModal">
             <span id="saveModalText">Would you like to name this palette? (Leave blank if not)</span>
             <input id="paletteNameInput" placeholder="Type name here..."></input>
-            <button id="savePaletteButton">Save</button>
+            <div class="hover button-area">
+                <div class="button-box-l delete-palette-button"></div>
+                <button id="savePaletteButton">Save</button>
+                <div class="button-box-r delete-palette-button"></div>
+            </div>
         </div>
         <div class="modal-window hidden" id="deletePaletteModal">
             <img class="modal-exit-button hover" src='./assets/delete.png'></img>
